--- a/Views/Declare/DomesticBlc_Edit.cshtml
+++ b/Views/Declare/DomesticBlc_Edit.cshtml
@@ -1,7 +1,8 @@
-﻿<form id="OrderFrom" method="post">
+﻿<form id="OrderFrom" class="OrderFrom" method="post">
     <div class="easyui-panel" style="margin-bottom:15px" title="现场关务"
          data-options="collapsible:true">
         <input type="hidden" name="ID" />
+        <input type="hidden" name="type" value="01" />
         <table id="scene">
             <tr>
                 <td>
@@ -9,8 +10,8 @@
                     <input class="easyui-textbox" type="text" name="FWONO" disabled="disabled" />
                 </td>
                 <td>
-                    <label for="FOCUSTOMSNO">FO号:</label>
-                    <input class="easyui-textbox" type="text" name="FOCUSTOMSNO" disabled="disabled" />
+                    <label for="FOONO">FO号:</label>
+                    <input class="easyui-textbox" type="text" name="FOONO" disabled="disabled" />
                 </td>
                 <td>
                     <label for="DECLWAY">报关方式:</label>
@@ -43,8 +44,8 @@
             <tr>
                 <td>
                     <label for="GUANWUJIESHOUTIME"> 关务接受时间:</label>
-                    <input class="easyui-textbox  time_input" id="GUANWUJIESHOUTIME" data-options="text:'填充时间'" type="text" name="GUANWUJIESHOUTIME" disabled="disabled" />
-                    <a href="javascript:void(0)" datatype="GUANWUJIESHOU" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
+                    <input class="easyui-textbox  time_input" id="GUANWUJIESHOUTIME" data-options="text:'填充时间'" datatype="GUANWUJIESHOU" name="GUANWUJIESHOUTIME" editable="false" />
+                    @*<a href="javascript:void(0)" datatype="GUANWUJIESHOU" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>*@
                 </td>
                 <td>
                     <label for="GUANWUJIESHOUUSERNAME">关务接受人:</label>
@@ -52,8 +53,8 @@
                 </td>
                 <td>
                     <label for="BAORUHAIGUANTIME"> 报入海关时间:</label>
-                    <input class="easyui-textbox time_input" type="text" id="BAORUHAIGUANTIME" name="BAORUHAIGUANTIME" disabled="disabled" />
-                    <a href="javascript:void(0)" datatype="BAORUHAIGUAN" class="easyui-linkbutton fillingData DECLSTATUS"><i class="icon-time"></i></a>
+                    <input class="easyui-textbox time_input DECLSTATUS" datatype="BAORUHAIGUAN" id="BAORUHAIGUANTIME" name="BAORUHAIGUANTIME" editable="false" />
+                    @*<a href="javascript:void(0)" datatype="BAORUHAIGUAN" class="easyui-linkbutton fillingData DECLSTATUS"><i class="icon-time"></i></a>*@
                 </td>
                 <td>
                     <label for="BAORUHAIGUANUSERNAME">报入海关人:</label>
@@ -63,8 +64,8 @@
             <tr>
                 <td>
                     <label for="SHANDANKAISHITIME"> 删单开始时间:</label>
-                    <input class="easyui-textbox  time_input" id="SHANDANKAISHITIME" data-options="text:'填充时间'" type="text" name="SHANDANKAISHITIME" disabled="disabled" />
-                    <a href="javascript:void(0)" datatype="SHANDANKAISHI" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
+                    <input class="easyui-textbox  time_input" id="SHANDANKAISHITIME" data-options="text:'填充时间'" datatype="SHANDANKAISHI" name="SHANDANKAISHITIME" editable="false" />
+                    @*<a href="javascript:void(0)" datatype="SHANDANKAISHI" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>*@
                 </td>
                 <td>
                     <label for="SHANDANKAISHIUSERNAME">删单开始人:</label>
@@ -72,8 +73,8 @@
                 </td>
                 <td>
                     <label for="SHANDANWANCHENGTIME"> 删单完成时间:</label>
-                    <input class="easyui-textbox time_input" type="text" id="SHANDANWANCHENGTIME" name="SHANDANWANCHENGTIME" disabled="disabled" />
-                    <a href="javascript:void(0)" datatype="SHANDANWANCHENG" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
+                    <input class="easyui-textbox time_input" datatype="SHANDANWANCHENG" id="SHANDANWANCHENGTIME" name="SHANDANWANCHENGTIME" editable="false" />
+                    @*<a href="javascript:void(0)" datatype="SHANDANWANCHENG" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>*@
                 </td>
                 <td>
                     <label for="SHANDANWANCHENGUSERNAME">删单完成人:</label>
@@ -83,8 +84,8 @@
             <tr>
                 <td>
                     <label for="GAIDANKAISHITIME"> 改单开始时间:</label>
-                    <input class="easyui-textbox  time_input" id="GAIDANKAISHITIME" data-options="text:'填充时间'" type="text" name="GAIDANKAISHITIME" disabled="disabled" />
-                    <a href="javascript:void(0)" datatype="GAIDANKAISHI" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
+                    <input class="easyui-textbox  time_input" id="GAIDANKAISHITIME" data-options="text:'填充时间'" datatype="GAIDANKAISHI" name="GAIDANKAISHITIME" editable="false" />
+                    @*<a href="javascript:void(0)" datatype="GAIDANKAISHI" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>*@
                 </td>
                 <td>
                     <label for="GAIDANKAISHIUSERNAME">改单开始人:</label>
@@ -92,8 +93,8 @@
                 </td>
                 <td>
                     <label for="GAIDANWANCHENGTIME"> 改单完成时间:</label>
-                    <input class="easyui-textbox time_input" type="text" id="GAIDANWANCHENGTIME" name="GAIDANWANCHENGTIME" disabled="disabled" />
-                    <a href="javascript:void(0)" datatype="GAIDANWANCHENG" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
+                    <input class="easyui-textbox time_input" datatype="GAIDANWANCHENG" id="GAIDANWANCHENGTIME" name="GAIDANWANCHENGTIME" editable="false" />
+                    @*<a href="javascript:void(0)" datatype="GAIDANWANCHENG" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>*@
                 </td>
                 <td>
                     <label for="GAIDANWANCHENGUSERNAME">改单完成人:</label>
@@ -103,8 +104,8 @@
             <tr>
                 <td>
                     <label for="CHAYANSTARTTIME"> 查验起始时间:</label>
-                    <input class="easyui-textbox time_input" type="text" id="CHAYANSTARTTIME" name="CHAYANSTARTTIME" disabled="disabled" />
-                    <a href="javascript:void(0)" datatype="CHAYANSTART" class="easyui-linkbutton fillingData DECLSTATUS"><i class="icon-time"></i></a>
+                    <input class="easyui-textbox time_input DECLSTATUS" datatype="CHAYANSTART" id="CHAYANSTARTTIME" name="CHAYANSTARTTIME" editable="false" />
+                    @*<a href="javascript:void(0)" datatype="CHAYANSTART" class="easyui-linkbutton fillingData DECLSTATUS"><i class="icon-time"></i></a>*@
                 </td>
                 <td>
                     <label for="CHAYANSTARTUSERNAME">起始查验人:</label>
@@ -112,8 +113,8 @@
                 </td>
                 <td>
                     <label for="CHAYANENDTIME"> 查验完成时间:</label>
-                    <input class="easyui-textbox time_input" type="text" id="CHAYANENDTIME" name="CHAYANENDTIME" disabled="disabled" />
-                    <a href="javascript:void(0)" datatype="CHAYANEND" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
+                    <input class="easyui-textbox time_input" datatype="CHAYANEND" id="CHAYANENDTIME" name="CHAYANENDTIME" editable="false" />
+                    @*<a href="javascript:void(0)" datatype="CHAYANEND" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>*@
                 </td>
                 <td>
                     <label for="CHAYANENDUSERNAME">完成查验人:</label>
@@ -123,8 +124,8 @@
             <tr>
                 <td>
                     <label for="DANZHENGFANGXINGTIME"> 单证放行时间:</label>
-                    <input class="easyui-textbox time_input" type="text" id="DANZHENGFANGXINGTIME" name="DANZHENGFANGXINGTIME" disabled="disabled" />
-                    <a href="javascript:void(0)" datatype="DANZHENGFANGXING" class="easyui-linkbutton fillingData DECLSTATUS"><i class="icon-time"></i></a>
+                    <input class="easyui-textbox time_input DECLSTATUS" datatype="DANZHENGFANGXING" id="DANZHENGFANGXINGTIME" name="DANZHENGFANGXINGTIME" editable="false" />
+                    @*<a href="javascript:void(0)" datatype="DANZHENGFANGXING" class="easyui-linkbutton fillingData DECLSTATUS"><i class="icon-time"></i></a>*@
                 </td>
                 <td>
                     <label for="DANZHENGFANGXINGUSERNAME">单证放行人:</label>
@@ -132,8 +133,8 @@
                 </td>
                 <td>
                     <label for="SHIWUFANGXINGTIME">实物放行时间:</label>
-                    <input class="easyui-textbox time_input" type="text" id="SHIWUFANGXINGTIME" name="SHIWUFANGXINGTIME" disabled="disabled" />
-                    <a href="javascript:void(0)" datatype="SHIWUFANGXING" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
+                    <input class="easyui-textbox time_input" datatype="SHIWUFANGXING" id="SHIWUFANGXINGTIME" name="SHIWUFANGXINGTIME" editable="false" />
+                    @*<a href="javascript:void(0)" datatype="SHIWUFANGXING" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>*@
                 </td>
                 <td>
                     <label for="SHIWUFANGXINGUSERNAME">实物放行人:</label>
