--- a/Views/Declare/OnelineIn_Edit.cshtml
+++ b/Views/Declare/OnelineIn_Edit.cshtml
@@ -1,7 +1,8 @@
-﻿<form id="OrderFrom" method="post">
+﻿<form id="OrderFrom" class="OrderFrom" method="post">
     <div id="" style="margin-bottom:20px" class="easyui-panel" title="订单主信息"
          data-options="collapsible:true">
         <input type="hidden" name="ID" />
+        <input type="hidden" name="type" value="01" />
         <table>
             <tr>
                 <td>
@@ -90,8 +91,8 @@
             <tr>
                 <td>
                     <label for="GUANWUJIESHOUTIME"> 关务接受时间:</label>
-                    <input class="easyui-datetimebox  time_input " id="GUANWUJIESHOUTIME" datatype="GUANWUJIESHOU" data-options="text:'填充时间'"  editable="false" name="GUANWUJIESHOUTIME" />
-                    <a href="javascript:void(0)" datatype="GUANWUJIESHOU" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
+                    <input class="easyui-datetimebox  time_input " id="GUANWUJIESHOUTIME" datatype="GUANWUJIESHOU" data-options="text:'填充时间'" editable="false" name="GUANWUJIESHOUTIME" />
+                    @*<a href="javascript:void(0)" datatype="GUANWUJIESHOU" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>*@
                 </td>
                 <td>
                     <label for="GUANWUJIESHOUUSERNAME">关务接受人:</label>
@@ -99,8 +100,8 @@
                 </td>
                 <td>
                     <label for="BAORUHAIGUANTIME"> 报入海关时间:</label>
-                    <input class="easyui-textbox time_input" type="text" id="BAORUHAIGUANTIME" datatype="DECLSTATUS" name="BAORUHAIGUANTIME" editable="false" />
-                    <a href="javascript:void(0)" datatype="BAORUHAIGUAN" class="easyui-linkbutton fillingData DECLSTATUS"><i class="icon-time"></i></a>
+                    <input class="easyui-textbox time_input DECLSTATUS" type="text" id="BAORUHAIGUANTIME" datatype="BAORUHAIGUAN" name="BAORUHAIGUANTIME" editable="false" />
+                    @*<a href="javascript:void(0)" datatype="BAORUHAIGUAN" class="easyui-linkbutton fillingData DECLSTATUS"><i class="icon-time"></i></a>*@
                 </td>
                 <td>
                     <label for="BAORUHAIGUANUSERNAME">报入海关人:</label>
@@ -111,7 +112,7 @@
                 <td>
                     <label for="SHANDANKAISHITIME"> 删单开始时间:</label>
                     <input class="easyui-textbox  time_input" id="SHANDANKAISHITIME" data-options="text:'填充时间'" datatype="SHANDANKAISHI" name="SHANDANKAISHITIME" editable="false" />
-                    <a href="javascript:void(0)" datatype="SHANDANKAISHI" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
+                    @*<a href="javascript:void(0)" datatype="SHANDANKAISHI" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>*@
                 </td>
                 <td>
                     <label for="SHANDANKAISHIUSERNAME">删单开始人:</label>
@@ -120,7 +121,7 @@
                 <td>
                     <label for="SHANDANWANCHENGTIME"> 删单完成时间:</label>
                     <input class="easyui-textbox time_input" id="SHANDANWANCHENGTIME" datatype="SHANDANWANCHENG" name="SHANDANWANCHENGTIME" editable="false" />
-                    <a href="javascript:void(0)" datatype="SHANDANWANCHENG" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
+                    @*<a href="javascript:void(0)" datatype="SHANDANWANCHENG" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>*@
                 </td>
                 <td>
                     <label for="SHANDANWANCHENGUSERNAME">删单完成人:</label>
@@ -130,8 +131,8 @@
             <tr>
                 <td>
                     <label for="GAIDANKAISHITIME"> 改单开始时间:</label>
-                    <input class="easyui-textbox  time_input" id="GAIDANKAISHITIME" data-options="text:'填充时间'"  name="GAIDANKAISHITIME"  editable="false" />
-                    <a href="javascript:void(0)" datatype="GAIDANKAISHI" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
+                    <input class="easyui-textbox  time_input" id="GAIDANKAISHITIME" datatype="GAIDANKAISHI" data-options="text:'填充时间'" name="GAIDANKAISHITIME" editable="false" />
+                    @*<a href="javascript:void(0)" datatype="GAIDANKAISHI" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>*@
                 </td>
                 <td>
                     <label for="GAIDANKAISHIUSERNAME">改单开始人:</label>
@@ -139,8 +140,8 @@
                 </td>
                 <td>
                     <label for="GAIDANWANCHENGTIME"> 改单完成时间:</label>
-                    <input class="easyui-textbox time_input" id="GAIDANWANCHENGTIME" name="GAIDANWANCHENGTIME" editable="false" />
-                    <a href="javascript:void(0)" datatype="GAIDANWANCHENG" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
+                    <input class="easyui-textbox time_input" id="GAIDANWANCHENGTIME" datatype="GAIDANWANCHENG" name="GAIDANWANCHENGTIME" editable="false" />
+                    @*<a href="javascript:void(0)" datatype="GAIDANWANCHENG" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>*@
                 </td>
                 <td>
                     <label for="GAIDANWANCHENGUSERNAME">改单完成人:</label>
@@ -150,8 +151,8 @@
             <tr>
                 <td>
                     <label for="DANZHENGFANGXINGTIME"> 单证放行时间:</label>
-                    <input class="easyui-textbox time_input"  id="DANZHENGFANGXINGTIME" name="DANZHENGFANGXINGTIME" editable="false" />
-                    <a href="javascript:void(0)" datatype="DANZHENGFANGXING" class="easyui-linkbutton fillingData DECLSTATUS"><i class="icon-time"></i></a>
+                    <input class="easyui-textbox time_input DECLSTATUS" id="DANZHENGFANGXINGTIME" datatype="DANZHENGFANGXING" name="DANZHENGFANGXINGTIME" editable="false" />
+                    @*<a href="javascript:void(0)" datatype="DANZHENGFANGXING" class="easyui-linkbutton fillingData DECLSTATUS"><i class="icon-time"></i></a>*@
                 </td>
                 <td>
                     <label for="DANZHENGFANGXINGUSERNAME">单证放行人:</label>
@@ -159,8 +160,8 @@
                 </td>
                 <td>
                     <label for="XIAOBAOTIME"> 销保时间:</label>
-                    <input class="easyui-textbox time_input"  id="XIAOBAOTIME" name="XIAOBAOTIME" editable="false" />
-                    <a href="javascript:void(0)" datatype="XIAOBAO" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
+                    <input class="easyui-textbox time_input" id="XIAOBAOTIME" name="XIAOBAOTIME" datatype="XIAOBAO" editable="false" />
+                    @*<a href="javascript:void(0)" datatype="XIAOBAO" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>*@
                 </td>
                 <td>
                     <label for="XIAOBAOUSERNAME">销保人:</label>
@@ -170,8 +171,8 @@
             <tr>
                 <td>
                     <label for="CHAYANSTARTTIME"> 查验起始时间:</label>
-                    <input class="easyui-textbox time_input"  id="CHAYANSTARTTIME" name="CHAYANSTARTTIME" editable="false" />
-                    <a href="javascript:void(0)" datatype="CHAYANSTART" class="easyui-linkbutton fillingData DECLSTATUS"><i class="icon-time"></i></a>
+                    <input class="easyui-textbox time_input DECLSTATUS" id="CHAYANSTARTTIME" datatype="CHAYANSTART" name="CHAYANSTARTTIME" editable="false" />
+                    @*<a href="javascript:void(0)" datatype="CHAYANSTART" class="easyui-linkbutton fillingData DECLSTATUS"><i class="icon-time"></i></a>*@
                 </td>
                 <td>
                     <label for="CHAYANSTARTUSERNAME">起始查验人:</label>
@@ -179,8 +180,8 @@
                 </td>
                 <td>
                     <label for="CHAYANENDTIME"> 查验完成时间:</label>
-                    <input class="easyui-textbox time_input"   id="CHAYANENDTIME" name="CHAYANENDTIME" editable="false" />
-                    <a href="javascript:void(0)" datatype="CHAYANEND" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
+                    <input class="easyui-textbox time_input" id="CHAYANENDTIME" datatype="CHAYANEND" name="CHAYANENDTIME" editable="false" />
+                    @*<a href="javascript:void(0)" datatype="CHAYANEND" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>*@
                 </td>
                 <td>
                     <label for="CHAYANENDUSERNAME">完成查验人:</label>
@@ -190,8 +191,8 @@
             <tr>
                 <td>
                     <label for="SHIWUFANGXINGTIME">实物放行时间:</label>
-                    <input class="easyui-textbox time_input"  id="SHIWUFANGXINGTIME" name="SHIWUFANGXINGTIME" editable="false" />
-                    <a href="javascript:void(0)" datatype="SHIWUFANGXING" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
+                    <input class="easyui-textbox time_input" id="SHIWUFANGXINGTIME" datatype="SHIWUFANGXING" name="SHIWUFANGXINGTIME" editable="false" />
+                    @*<a href="javascript:void(0)" datatype="SHIWUFANGXING" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>*@
                 </td>
                 <td>
                     <label for="SHIWUFANGXINGUSERNAME">实物放行人:</label>
@@ -321,47 +322,4 @@
 
 <script type="text/javascript">
     Edit();
-
-    $(function () {
-
-        $('.time_input').datetimebox({
-            stopFirstChangeEvent: true,
-            onChange: function () {
-                var options = $(this).datetimebox('options');
-
-                if (options.stopFirstChangeEvent) {
-                    options.stopFirstChangeEvent = false;
-                    return;
-                }
-                var type = $(this).nextAll()[1].getAttribute("datatype");
-                var id_val = "#" + this.id;
-                var date = $(id_val).datetimebox('getValue');
-                var ID = getQueryString('ID');
-                $.ajax({
-                    url: '/Order/Edit_Ajax_Scene',// 跳转到 action
-                    data: {
-                        'ID': ID,
-                        'type': type,
-                        'date': date
-                    },
-                    type: 'post',
-                    dataType: 'json',
-                    success: function (data) {
-                        debugger;
-                        if (data.Success == true) {
-                            var name = "#" + type + 'USERNAME';
-                            $(name).textbox('setValue', data.name);
-                        } else {
-                            $.messager.alert('异常', '联系管理员');
-                        }
-                    },
-
-                });
-
-            }
-        });
-
-
-    });
-
-</script>
+ </script>
