--- a/Views/Declare/OverlayBonded_Edit.cshtml
+++ b/Views/Declare/OverlayBonded_Edit.cshtml
@@ -5,6 +5,7 @@
         <div title="转入">
             <form class="OrderFrom" method="post" id="OrderFrom1">
                 <input type="hidden" name="ID" value="@ViewData["id1"]" />
+                <input type="hidden" name="type" value="01" />
                 <table class="scene">
                     <tr>
                         <td>
@@ -47,8 +48,8 @@
                     <tr>
                         <td>
                             <label for="GUANWUJIESHOUTIME"> 关务接受时间:</label>
-                            <input class="easyui-textbox  time_input" id="GUANWUJIESHOUTIME" data-options="text:'填充时间'" type="text" name="GUANWUJIESHOUTIME" disabled="disabled" />
-                            <a href="javascript:void(0)" datatype="GUANWUJIESHOU" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
+                            <input class="easyui-textbox  time_input" id="GUANWUJIESHOUTIME" data-options="text:'填充时间'" datatype="GUANWUJIESHOU" name="GUANWUJIESHOUTIME" editable="false" />
+                            @*<a href="javascript:void(0)" datatype="GUANWUJIESHOU" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>*@
                         </td>
                         <td>
                             <label for="GUANWUJIESHOUUSERNAME">关务接受人:</label>
@@ -56,8 +57,8 @@
                         </td>
                         <td>
                             <label for="BAORUHAIGUANTIME"> 报入海关时间:</label>
-                            <input class="easyui-textbox time_input" type="text" id="BAORUHAIGUANTIME" name="BAORUHAIGUANTIME" disabled="disabled" />
-                            <a href="javascript:void(0)" datatype="BAORUHAIGUAN" class="easyui-linkbutton fillingData DECLSTATUS"><i class="icon-time"></i></a>
+                            <input class="easyui-textbox time_input DECLSTATUS" datatype="BAORUHAIGUAN" id="BAORUHAIGUANTIME" name="BAORUHAIGUANTIME" editable="false" />
+                            @*<a href="javascript:void(0)" datatype="BAORUHAIGUAN" class="easyui-linkbutton fillingData DECLSTATUS"><i class="icon-time"></i></a>*@
                         </td>
                         <td>
                             <label for="BAORUHAIGUANUSERNAME">报入海关人:</label>
@@ -67,8 +68,8 @@
                     <tr>
                         <td>
                             <label for="SHANDANKAISHITIME"> 删单开始时间:</label>
-                            <input class="easyui-textbox  time_input" id="SHANDANKAISHITIME" data-options="text:'填充时间'" type="text" name="SHANDANKAISHITIME" disabled="disabled" />
-                            <a href="javascript:void(0)" datatype="SHANDANKAISHI" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
+                            <input class="easyui-textbox  time_input" id="SHANDANKAISHITIME" data-options="text:'填充时间'" datatype="SHANDANKAISHI" name="SHANDANKAISHITIME" editable="false" />
+                            @*<a href="javascript:void(0)" datatype="SHANDANKAISHI" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>*@
                         </td>
                         <td>
                             <label for="SHANDANKAISHIUSERNAME">删单开始人:</label>
@@ -76,8 +77,8 @@
                         </td>
                         <td>
                             <label for="SHANDANWANCHENGTIME"> 删单完成时间:</label>
-                            <input class="easyui-textbox time_input" type="text" id="SHANDANWANCHENGTIME" name="SHANDANWANCHENGTIME" disabled="disabled" />
-                            <a href="javascript:void(0)" datatype="SHANDANWANCHENG" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
+                            <input class="easyui-textbox time_input" datatype="SHANDANWANCHENG" id="SHANDANWANCHENGTIME" name="SHANDANWANCHENGTIME" editable="false" />
+                            @*<a href="javascript:void(0)" datatype="SHANDANWANCHENG" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>*@
                         </td>
                         <td>
                             <label for="SHANDANWANCHENGUSERNAME">删单完成人:</label>
@@ -87,8 +88,8 @@
                     <tr>
                         <td>
                             <label for="GAIDANKAISHITIME"> 改单开始时间:</label>
-                            <input class="easyui-textbox  time_input" id="GAIDANKAISHITIME" data-options="text:'填充时间'" type="text" name="GAIDANKAISHITIME" disabled="disabled" />
-                            <a href="javascript:void(0)" datatype="GAIDANKAISHI" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
+                            <input class="easyui-textbox  time_input" id="GAIDANKAISHITIME" data-options="text:'填充时间'" datatype="GAIDANKAISHI" name="GAIDANKAISHITIME" editable="false" />
+                            @*<a href="javascript:void(0)" datatype="GAIDANKAISHI" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>*@
                         </td>
                         <td>
                             <label for="GAIDANKAISHIUSERNAME">改单开始人:</label>
@@ -96,8 +97,8 @@
                         </td>
                         <td>
                             <label for="GAIDANWANCHENGTIME"> 改单完成时间:</label>
-                            <input class="easyui-textbox time_input" type="text" id="GAIDANWANCHENGTIME" name="GAIDANWANCHENGTIME" disabled="disabled" />
-                            <a href="javascript:void(0)" datatype="GAIDANWANCHENG" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
+                            <input class="easyui-textbox time_input" datatype="GAIDANWANCHENG" id="GAIDANWANCHENGTIME" name="GAIDANWANCHENGTIME" editable="false" />
+                            @*<a href="javascript:void(0)" datatype="GAIDANWANCHENG" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>*@
                         </td>
                         <td>
                             <label for="GAIDANWANCHENGUSERNAME">改单完成人:</label>
@@ -107,8 +108,8 @@
                     <tr>
                         <td>
                             <label for="CHAYANSTARTTIME"> 查验起始时间:</label>
-                            <input class="easyui-textbox time_input" type="text" id="CHAYANSTARTTIME" name="CHAYANSTARTTIME" disabled="disabled" />
-                            <a href="javascript:void(0)" datatype="CHAYANSTART" class="easyui-linkbutton fillingData DECLSTATUS"><i class="icon-time"></i></a>
+                            <input class="easyui-textbox time_input DECLSTATUS" datatype="CHAYANSTART" id="CHAYANSTARTTIME" name="CHAYANSTARTTIME" editable="false" />
+                            @*<a href="javascript:void(0)" datatype="CHAYANSTART" class="easyui-linkbutton fillingData DECLSTATUS"><i class="icon-time"></i></a>*@
                         </td>
                         <td>
                             <label for="CHAYANSTARTUSERNAME">起始查验人:</label>
@@ -116,8 +117,8 @@
                         </td>
                         <td>
                             <label for="CHAYANENDTIME"> 查验完成时间:</label>
-                            <input class="easyui-textbox time_input" type="text" id="CHAYANENDTIME" name="CHAYANENDTIME" disabled="disabled" />
-                            <a href="javascript:void(0)" datatype="CHAYANEND" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
+                            <input class="easyui-textbox time_input" datatype="CHAYANEND" id="CHAYANENDTIME" name="CHAYANENDTIME" editable="false" />
+                            @*<a href="javascript:void(0)" datatype="CHAYANEND" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>*@
                         </td>
                         <td>
                             <label for="CHAYANENDUSERNAME">完成查验人:</label>
@@ -127,8 +128,8 @@
                     <tr>
                         <td>
                             <label for="DANZHENGFANGXINGTIME"> 单证放行时间:</label>
-                            <input class="easyui-textbox time_input" type="text" id="DANZHENGFANGXINGTIME" name="DANZHENGFANGXINGTIME" disabled="disabled" />
-                            <a href="javascript:void(0)" datatype="DANZHENGFANGXING" class="easyui-linkbutton fillingData DECLSTATUS"><i class="icon-time"></i></a>
+                            <input class="easyui-textbox time_input DECLSTATUS" datatype="DANZHENGFANGXING" id="DANZHENGFANGXINGTIME" name="DANZHENGFANGXINGTIME" editable="false" />
+                            @*<a href="javascript:void(0)" datatype="DANZHENGFANGXING" class="easyui-linkbutton fillingData DECLSTATUS"><i class="icon-time"></i></a>*@
                         </td>
                         <td>
                             <label for="DANZHENGFANGXINGUSERNAME">单证放行人:</label>
@@ -136,8 +137,8 @@
                         </td>
                         <td>
                             <label for="SHIWUFANGXINGTIME">实物放行时间:</label>
-                            <input class="easyui-textbox time_input" type="text" id="SHIWUFANGXINGTIME" name="SHIWUFANGXINGTIME" disabled="disabled" />
-                            <a href="javascript:void(0)" datatype="SHIWUFANGXING" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
+                            <input class="easyui-textbox time_input" datatype="SHIWUFANGXING" id="SHIWUFANGXINGTIME" name="SHIWUFANGXINGTIME" editable="false" />
+                            @*<a href="javascript:void(0)" datatype="SHIWUFANGXING" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>*@
                         </td>
                         <td>
                             <label for="SHIWUFANGXINGUSERNAME">实物放行人:</label>
@@ -266,6 +267,7 @@
         <div title="转出">
             <form class="OrderFrom" method="post" id="OrderFrom3">
                 <input type="hidden" name="ID" value="@ViewData["id3"]" />
+                <input type="hidden" name="type" value="01" />
                 <table class="scene">
                     <tr>
                         <td>
@@ -310,8 +312,8 @@
                     <tr>
                         <td>
                             <label for="GUANWUJIESHOUTIME"> 关务接受时间:</label>
-                            <input class="easyui-textbox  time_input" id="GUANWUJIESHOUTIME" data-options="text:'填充时间'" type="text" name="GUANWUJIESHOUTIME" disabled="disabled" />
-                            <a href="javascript:void(0)" datatype="GUANWUJIESHOU" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
+                            <input class="easyui-textbox  time_input" id="GUANWUJIESHOUTIME" data-options="text:'填充时间'" datatype="GUANWUJIESHOU" name="GUANWUJIESHOUTIME" editable="false" />
+                            @*<a href="javascript:void(0)" datatype="GUANWUJIESHOU" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>*@
                         </td>
                         <td>
                             <label for="GUANWUJIESHOUUSERNAME">关务接受人:</label>
@@ -319,8 +321,8 @@
                         </td>
                         <td>
                             <label for="BAORUHAIGUANTIME"> 报入海关时间:</label>
-                            <input class="easyui-textbox time_input" type="text" id="BAORUHAIGUANTIME" name="BAORUHAIGUANTIME" disabled="disabled" />
-                            <a href="javascript:void(0)" datatype="BAORUHAIGUAN" class="easyui-linkbutton fillingData DECLSTATUS2"><i class="icon-time"></i></a>
+                            <input class="easyui-textbox time_input DECLSTATUS2" datatype="BAORUHAIGUAN" id="BAORUHAIGUANTIME" name="BAORUHAIGUANTIME" editable="false" />
+                            @*<a href="javascript:void(0)" datatype="BAORUHAIGUAN" class="easyui-linkbutton fillingData DECLSTATUS2"><i class="icon-time"></i></a>*@
                         </td>
                         <td>
                             <label for="BAORUHAIGUANUSERNAME">报入海关人:</label>
@@ -330,8 +332,8 @@
                     <tr>
                         <td>
                             <label for="SHANDANKAISHITIME"> 删单开始时间:</label>
-                            <input class="easyui-textbox  time_input" id="SHANDANKAISHITIME" data-options="text:'填充时间'" type="text" name="SHANDANKAISHITIME" disabled="disabled" />
-                            <a href="javascript:void(0)" datatype="SHANDANKAISHI" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
+                            <input class="easyui-textbox  time_input" id="SHANDANKAISHITIME" data-options="text:'填充时间'" datatype="SHANDANKAISHI" name="SHANDANKAISHITIME" editable="false" />
+                            @*<a href="javascript:void(0)" datatype="SHANDANKAISHI" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>*@
                         </td>
                         <td>
                             <label for="SHANDANKAISHIUSERNAME">删单开始人:</label>
@@ -339,8 +341,8 @@
                         </td>
                         <td>
                             <label for="SHANDANWANCHENGTIME"> 删单完成时间:</label>
-                            <input class="easyui-textbox time_input" type="text" id="SHANDANWANCHENGTIME" name="SHANDANWANCHENGTIME" disabled="disabled" />
-                            <a href="javascript:void(0)" datatype="SHANDANWANCHENG" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
+                            <input class="easyui-textbox time_input" datatype="SHANDANWANCHENG" id="SHANDANWANCHENGTIME" name="SHANDANWANCHENGTIME" editable="false" />
+                            @*<a href="javascript:void(0)" datatype="SHANDANWANCHENG" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>*@
                         </td>
                         <td>
                             <label for="SHANDANWANCHENGUSERNAME">删单完成人:</label>
@@ -350,8 +352,8 @@
                     <tr>
                         <td>
                             <label for="GAIDANKAISHITIME"> 改单开始时间:</label>
-                            <input class="easyui-textbox  time_input" id="GAIDANKAISHITIME" data-options="text:'填充时间'" type="text" name="GAIDANKAISHITIME" disabled="disabled" />
-                            <a href="javascript:void(0)" datatype="GAIDANKAISHI" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
+                            <input class="easyui-textbox  time_input" id="GAIDANKAISHITIME" data-options="text:'填充时间'" datatype="GAIDANKAISHI" name="GAIDANKAISHITIME" editable="false" />
+                            @*<a href="javascript:void(0)" datatype="GAIDANKAISHI" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>*@
                         </td>
                         <td>
                             <label for="GAIDANKAISHIUSERNAME">改单开始人:</label>
@@ -359,8 +361,8 @@
                         </td>
                         <td>
                             <label for="GAIDANWANCHENGTIME"> 改单完成时间:</label>
-                            <input class="easyui-textbox time_input" type="text" id="GAIDANWANCHENGTIME" name="GAIDANWANCHENGTIME" disabled="disabled" />
-                            <a href="javascript:void(0)" datatype="GAIDANWANCHENG" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
+                            <input class="easyui-textbox time_input" datatype="GAIDANWANCHENG" id="GAIDANWANCHENGTIME" name="GAIDANWANCHENGTIME" editable="false" />
+                            @*<a href="javascript:void(0)" datatype="GAIDANWANCHENG" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>*@
                         </td>
                         <td>
                             <label for="GAIDANWANCHENGUSERNAME">改单完成人:</label>
@@ -370,8 +372,8 @@
                     <tr>
                         <td>
                             <label for="CHAYANSTARTTIME"> 查验起始时间:</label>
-                            <input class="easyui-textbox time_input" type="text" id="CHAYANSTARTTIME" name="CHAYANSTARTTIME" disabled="disabled" />
-                            <a href="javascript:void(0)" datatype="CHAYANSTART" class="easyui-linkbutton fillingData DECLSTATUS2"><i class="icon-time"></i></a>
+                            <input class="easyui-textbox time_input DECLSTATUS2" datatype="CHAYANSTART" id="CHAYANSTARTTIME" name="CHAYANSTARTTIME" editable="false" />
+                            @*<a href="javascript:void(0)" datatype="CHAYANSTART" class="easyui-linkbutton fillingData DECLSTATUS2"><i class="icon-time"></i></a>*@
                         </td>
                         <td>
                             <label for="CHAYANSTARTUSERNAME">起始查验人:</label>
@@ -379,8 +381,8 @@
                         </td>
                         <td>
                             <label for="CHAYANENDTIME"> 查验完成时间:</label>
-                            <input class="easyui-textbox time_input" type="text" id="CHAYANENDTIME" name="CHAYANENDTIME" disabled="disabled" />
-                            <a href="javascript:void(0)" datatype="CHAYANEND" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
+                            <input class="easyui-textbox time_input" datatype="CHAYANEND" id="CHAYANENDTIME" name="CHAYANENDTIME" editable="false" />
+                            @*<a href="javascript:void(0)" datatype="CHAYANEND" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>*@
                         </td>
                         <td>
                             <label for="CHAYANENDUSERNAME">完成查验人:</label>
@@ -390,8 +392,8 @@
                     <tr>
                         <td>
                             <label for="DANZHENGFANGXINGTIME"> 单证放行时间:</label>
-                            <input class="easyui-textbox time_input" type="text" id="DANZHENGFANGXINGTIME" name="DANZHENGFANGXINGTIME" disabled="disabled" />
-                            <a href="javascript:void(0)" datatype="DANZHENGFANGXING" class="easyui-linkbutton fillingData DECLSTATUS2"><i class="icon-time"></i></a>
+                            <input class="easyui-textbox time_input DECLSTATUS2" datatype="DANZHENGFANGXING" id="DANZHENGFANGXINGTIME" name="DANZHENGFANGXINGTIME" editable="false" />
+                            @*<a href="javascript:void(0)" datatype="DANZHENGFANGXING" class="easyui-linkbutton fillingData DECLSTATUS2"><i class="icon-time"></i></a>*@
                         </td>
                         <td>
                             <label for="DANZHENGFANGXINGUSERNAME">单证放行人:</label>
@@ -399,8 +401,8 @@
                         </td>
                         <td>
                             <label for="SHIWUFANGXINGTIME">实物放行时间:</label>
-                            <input class="easyui-textbox time_input" type="text" id="SHIWUFANGXINGTIME" name="SHIWUFANGXINGTIME" disabled="disabled" />
-                            <a href="javascript:void(0)" datatype="SHIWUFANGXING" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
+                            <input class="easyui-textbox time_input" datatype="SHIWUFANGXING" id="SHIWUFANGXINGTIME" name="SHIWUFANGXINGTIME" editable="false" />
+                            @*<a href="javascript:void(0)" datatype="SHIWUFANGXING" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>*@
                         </td>
                         <td>
                             <label for="SHIWUFANGXINGUSERNAME">实物放行人:</label>
