--- a/Views/Inspect/OnelineIn_Edit.cshtml
+++ b/Views/Inspect/OnelineIn_Edit.cshtml
@@ -1,8 +1,9 @@
 ﻿
-<form id="OrderFrom" method="post">
+<form id="OrderFrom" class="OrderFrom" method="post">
     <div id="" style="margin-bottom:20px" class="easyui-panel" title="订单主信息"
          data-options="collapsible:true">
         <input type="hidden" name="ID" />
+        <input type="hidden" name="type" value="02" />
         <table>
 
             <tr>
@@ -11,8 +12,8 @@
                     <input class="easyui-textbox" type="text" name="FWONO" disabled="disabled" />
                 </td>
                 <td>
-                    <label for="FOONO">FO号:</label>
-                    <input class="easyui-textbox" type="text" name="FOONO" disabled="disabled" />
+                    <label for="FOONOBJ">FO号:</label>
+                    <input class="easyui-textbox" type="text" name="FOONOBJ" disabled="disabled" />
                 </td>
                 <td>
                     <label for="TOTALNO">总单号:</label>
@@ -101,8 +102,8 @@
             <tr>
                 <td>
                     <label for="BAOJIANTIME"> 报检时间:</label>
-                    <input class="easyui-textbox time_input" type="text" id="BAOJIANTIME" name="BAOJIANTIME" disabled="disabled" />
-                    <a href="javascript:void(0)" datatype="BAOJIAN" class="easyui-linkbutton fillingData INSPSTATUS"><i class="icon-time"></i></a>
+                    <input class="easyui-textbox time_input INSPSTATUS" datatype="BAOJIAN" id="BAOJIANTIME" name="BAOJIANTIME" editable="false" />
+                    @*<a href="javascript:void(0)" datatype="BAOJIAN" class="easyui-linkbutton fillingData INSPSTATUS"><i class="icon-time"></i></a>*@
                 </td>
                 <td>
                     <label for="BAOJIANUSERNAME">报检人:</label>
@@ -110,8 +111,8 @@
                 </td>
                 <td>
                     <label for="BAOJIANFANGXINGTIME"> 报检放行时间:</label>
-                    <input class="easyui-textbox time_input" type="text" id="BAOJIANFANGXINGTIME" name="BAOJIANFANGXINGTIME" disabled="disabled" />
-                    <a href="javascript:void(0)" datatype="BAOJIANFANGXING" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
+                    <input class="easyui-textbox time_input" datatype="BAOJIANFANGXING" id="BAOJIANFANGXINGTIME" name="BAOJIANFANGXINGTIME" editable="false" />
+                    @*<a href="javascript:void(0)" datatype="BAOJIANFANGXING" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>*@
                 </td>
                 <td>
                     <label for="BAOJIANFANGXINGUSERNAME">报检放行人:</label>
@@ -122,8 +123,8 @@
             <tr>
                 <td>
                     <label for="SHANDANKAISHITIME"> 删单时间:</label>
-                    <input class="easyui-textbox time_input" type="text" id="SHANDANKAISHITIME" name="SHANDANKAISHITIME" disabled="disabled" />
-                    <a href="javascript:void(0)" datatype="SHANDANKAISHI" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
+                    <input class="easyui-textbox time_input" datatype="SHANDANKAISHI" id="SHANDANKAISHITIME" name="SHANDANKAISHITIME" editable="false" />
+                    @*<a href="javascript:void(0)" datatype="SHANDANKAISHI" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>*@
                 </td>
                 <td>
                     <label for="SHANDANKAISHIUSERNAME">删单人:</label>
@@ -131,8 +132,8 @@
                 </td>
                 <td>
                     <label for="GAIDANKAISHITIME"> 改单时间:</label>
-                    <input class="easyui-textbox time_input" type="text" id="GAIDANKAISHITIME" name="GAIDANKAISHITIME" disabled="disabled" />
-                    <a href="javascript:void(0)" datatype="GAIDANKAISHI" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
+                    <input class="easyui-textbox time_input" datatype="GAIDANKAISHI" id="GAIDANKAISHITIME" name="GAIDANKAISHITIME" editable="false" />
+                    @*<a href="javascript:void(0)" datatype="GAIDANKAISHI" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>*@
                 </td>
                 <td>
                     <label for="GAIDANKAISHIUSERNAME">改单人:</label>
@@ -143,8 +144,8 @@
             <tr>
                 <td>
                     <label for="CHAYANZHILINGXIAFATIME"> 查验时间:</label>
-                    <input class="easyui-textbox time_input" type="text" id="CHAYANZHILINGXIAFATIME" name="CHAYANZHILINGXIAFATIME" disabled="disabled" />
-                    <a href="javascript:void(0)" datatype="CHAYANZHILINGXIAFA" class="easyui-linkbutton fillingData INSPSTATUS"><i class="icon-time"></i></a>
+                    <input class="easyui-textbox time_input INSPSTATUS" datatype="CHAYANZHILINGXIAFA" id="CHAYANZHILINGXIAFATIME" name="CHAYANZHILINGXIAFATIME" editable="false" />
+                    @*<a href="javascript:void(0)" datatype="CHAYANZHILINGXIAFA" class="easyui-linkbutton fillingData INSPSTATUS"><i class="icon-time"></i></a>*@
                 </td>
                 <td>
                     <label for="CHAYANZHILINGXIAFAUSERNAME">查验人:</label>
@@ -152,8 +153,8 @@
                 </td>
                 <td>
                     <label for="CHAYANFANGXINGTIME"> 查验放行时间:</label>
-                    <input class="easyui-textbox time_input" type="text" id="CHAYANFANGXINGTIME" name="CHAYANFANGXINGTIME" disabled="disabled" />
-                    <a href="javascript:void(0)" datatype="CHAYANFANGXING" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
+                    <input class="easyui-textbox time_input" datatype="CHAYANFANGXING" id="CHAYANFANGXINGTIME" name="CHAYANFANGXINGTIME" editable="false" />
+                    @*<a href="javascript:void(0)" datatype="CHAYANFANGXING" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>*@
                 </td>
                 <td>
                     <label for="CHAYANFANGXINGUSERNAME">查验放行人:</label>
@@ -164,8 +165,8 @@
             <tr>
                 <td>
                     <label for="XUNZHENGTIME">熏蒸时间:</label>
-                    <input class="easyui-textbox time_input" type="text" id="XUNZHENGTIME" name="XUNZHENGTIME" disabled="disabled" />
-                    <a href="javascript:void(0)" datatype="XUNZHENG" class="easyui-linkbutton fillingData INSPSTATUS"><i class="icon-time"></i></a>
+                    <input class="easyui-textbox time_input INSPSTATUS" datatype="XUNZHENG" id="XUNZHENGTIME" name="XUNZHENGTIME" editable="false" />
+                    @*<a href="javascript:void(0)" datatype="XUNZHENG" class="easyui-linkbutton fillingData INSPSTATUS"><i class="icon-time"></i></a>*@
                 </td>
                 <td>
                     <label for="XUNZHENGUSERNAME">熏蒸人:</label>
@@ -225,13 +226,13 @@
                 <td>
                     <label for="INSPSTATUS">报检状态:</label>
                     @*<select class="easyui-combobox" name="INSPSTATUS">
-                        <option value="">请选择</option>
-                        <option value="报检">报检</option>
-                        <option value="木托">查验</option>
-                        <option value="熏蒸">熏蒸</option>
-                    </select>*@
+                            <option value="">请选择</option>
+                            <option value="报检">报检</option>
+                            <option value="木托">查验</option>
+                            <option value="熏蒸">熏蒸</option>
+                        </select>*@
 
-                    <input class="easyui-textbox" name="INSPSTATUS" id="INSPSTATUS" >
+                    <input class="easyui-textbox" name="INSPSTATUS" id="INSPSTATUS">
                 </td>
             </tr>
 
