报关操作三个页面的批量更新

--- a/Views/Declare/DomesticBlc_Edit.cshtml
+++ b/Views/Declare/DomesticBlc_Edit.cshtml
@@ -257,10 +257,10 @@
     </div>
     <div style="text-align:center;padding:5px 0">
         <a class="btn btn-primary" href="javascript:void(0)" onclick="BaoguandanInfo()">
-            报关单信息
+            <i class="fa fa-file-text-o" aria-hidden="true"></i> 报关单信息
         </a>
         <a class="btn btn-primary" href="javascript:void(0)" onclick="JizhuangxiangInfo()">
-            集装箱信息
+            <i class="fa fa-suitcase" aria-hidden="true"></i> 集装箱信息
         </a>
         <a class="btn btn-primary" href="javascript:void(0)" onclick="submitForm()">
             <i class="fa fa-floppy-o"></i> 保存
