--- a/Views/Inspect/DomesticKnot_Edit.cshtml
+++ b/Views/Inspect/DomesticKnot_Edit.cshtml
@@ -205,10 +205,10 @@
 
 <div style="text-align:center;padding:5px 0">
     <a class="btn btn-primary" href="javascript:void(0)" onclick="TongguandanInfo()">
-        通关单信息
+        <i class="fa fa-file-text-o" aria-hidden="true"></i> 通关单信息
     </a>
     <a class="btn btn-primary" href="javascript:void(0)" onclick="JizhuangxiangInfo()">
-        集装箱信息
+        <i class="fa fa-suitcase" aria-hidden="true"></i> 集装箱信息
     </a>
     <a class="btn btn-primary" href="javascript:void(0)" onclick="manySubmitForm()">
         <i class="fa fa-floppy-o"></i> 保存
