--- a/Views/Inspect/SpecialSupervision_Edit.cshtml
+++ b/Views/Inspect/SpecialSupervision_Edit.cshtml
@@ -1,98 +1,48 @@
-﻿
-<form id="OrderFrom" class="OrderFrom" method="post">
+﻿<form id="OrderFrom" method="post">
     <div id="" style="margin-bottom:20px" class="easyui-panel" title="订单主信息"
          data-options="collapsible:true">
         <input type="hidden" name="ID" />
-        <input type="hidden" name="type" value="02" />
         <table>
 
             <tr>
                 <td>
-                    <label for="FWONO">FWO订单号:</label>
-                    <input class="easyui-textbox" type="text" name="FWONO" disabled="disabled" />
-                </td>
-                <td>
-                    <label for="FOONOBJ">FO号:</label>
-                    <input class="easyui-textbox" type="text" name="FOONOBJ" disabled="disabled" />
-                </td>
-                <td>
-                    <label for="TOTALNO">总单号:</label>
-                    <input class="easyui-textbox" type="text" name="TOTALNO" disabled="disabled" />
-                </td>
-                <td>
-                    <label for="DIVIDENO">分单号:</label>
-                    <input class="easyui-textbox" type="text" name="DIVIDENO" disabled="disabled" />
-                </td>
-            </tr>
-
-            <tr>
-                <td>
-                    <label for="text">万达号:</label>
-                    <input class="easyui-textbox" type="text" name="text" disabled="disabled" />
-                </td>
-                <td>
-                    <label for="MANIFEST">载货清单号:</label>
-                    <input class="easyui-textbox" type="text" name="MANIFEST" disabled="disabled" />
-                </td>
-                <td>
-                    <div style="text-align:center">
-                        散货:
-                        <input class="" type="radio" name="" disabled="disabled" />
-                        整箱:
-                        <input class="" type="radio" name="" disabled="disabled" />
-                        拼箱:
-                        <input class="" type="radio" name="" disabled="disabled" />
-                    </div>
+                    <label>FWO号:</label>
+                    <input class="easyui-textbox" type="text" name="CODE" disabled="disabled" />
                 </td>
 
                 <td>
-                    <div style="text-align:center">
-                        木质包装:
-                        <input class="" type="checkbox" name="" disabled="disabled" />
-                        通关单否:
-                        <input class="" type="checkbox" name="" disabled="disabled" />
-                        法检标志:
-                        <input class="" type="checkbox" name="" disabled="disabled" />
-                    </div>
+                    <label>FOO号:</label>
+                    <input class="easyui-textbox" type="text" name="FOONO" disabled="disabled" />
                 </td>
-            </tr>
 
-
-            <tr>
                 <td>
                     <label for="CODE">业务编号:</label>
                     <input class="easyui-textbox" type="text" name="CODE" disabled="disabled" />
                 </td>
                 <td>
-                    <label for="">收货人:</label>
-                    <input class="easyui-textbox" type="text" name="SFGOODSUNIT" disabled="disabled" />
-                </td>
-                <td>
-                    <label for="CONTRACTNO"> 合同/发票号:</label>
-                    <input class="easyui-textbox" type="text" name="CONTRACTNO" disabled="disabled" />
+                    <label for="REPWAYID">申报方式:</label>
+                    <input class="easyui-textbox" type="text" name="REPWAYID" disabled="disabled" />
                 </td>
             </tr>
+
             <tr>
                 <td>
-                    <label for="GOODSNUM"> 总件数:</label>
+                    <label>发货人:</label>
+                    <input class="easyui-textbox" type="text" name="BUSIUNITNAME" disabled="disabled" />
+                </td>
+                <td>
+                    <label>转关录入号:</label>
+                    <input class="easyui-textbox" type="text" name="TURNPRENO" disabled="disabled" />
+                </td>
+                <td>
+                    <label>总件数:</label>
                     <input class="easyui-textbox" type="text" name="GOODSNUM" disabled="disabled" />
                 </td>
                 <td>
-                    <label for="GOODSWEIGHT">总重量:</label>
+                    <label>总重量:</label>
                     <input class="easyui-textbox" type="text" name="GOODSWEIGHT" disabled="disabled" />
                 </td>
-                <td>
-                    <label for="FIRSTLADINGBILLNO">一程提运单号:</label>
-                    <input class="easyui-textbox" type="text" name="FIRSTLADINGBILLNO" disabled="disabled" />
-                </td>
-                <td>
-                    <label for="SECONDLADINGBILLNO">二程提运单号:</label>
-                    <input class="easyui-textbox" type="text" name="SECONDLADINGBILLNO" disabled="disabled" />
-                </td>
             </tr>
-
-
-
         </table>
     </div>
 
@@ -102,8 +52,8 @@
             <tr>
                 <td>
                     <label for="BAOJIANTIME"> 报检时间:</label>
-                    <input class="easyui-textbox time_input INSPSTATUS" datatype="BAOJIAN" id="BAOJIANTIME" name="BAOJIANTIME" editable="false" />
-                    @*<a href="javascript:void(0)" datatype="BAOJIAN" class="easyui-linkbutton fillingData INSPSTATUS"><i class="icon-time"></i></a>*@
+                    <input class="easyui-textbox time_input" type="text" id="BAOJIANTIME" name="BAOJIANTIME" disabled="disabled" />
+                    <a href="javascript:void(0)" datatype="BAOJIAN" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
                 </td>
                 <td>
                     <label for="BAOJIANUSERNAME">报检人:</label>
@@ -111,8 +61,8 @@
                 </td>
                 <td>
                     <label for="BAOJIANFANGXINGTIME"> 报检放行时间:</label>
-                    <input class="easyui-textbox time_input" datatype="BAOJIANFANGXING" id="BAOJIANFANGXINGTIME" name="BAOJIANFANGXINGTIME" editable="false" />
-                    @*<a href="javascript:void(0)" datatype="BAOJIANFANGXING" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>*@
+                    <input class="easyui-textbox time_input" type="text" id="BAOJIANFANGXINGTIME" name="BAOJIANFANGXINGTIME" disabled="disabled" />
+                    <a href="javascript:void(0)" datatype="BAOJIANFANGXING" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
                 </td>
                 <td>
                     <label for="BAOJIANFANGXINGUSERNAME">报检放行人:</label>
@@ -123,8 +73,8 @@
             <tr>
                 <td>
                     <label for="SHANDANKAISHITIME"> 删单时间:</label>
-                    <input class="easyui-textbox time_input" datatype="SHANDANKAISHI" id="SHANDANKAISHITIME" name="SHANDANKAISHITIME" editable="false" />
-                    @*<a href="javascript:void(0)" datatype="SHANDANKAISHI" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>*@
+                    <input class="easyui-textbox time_input" type="text" id="SHANDANKAISHITIME" name="SHANDANKAISHITIME" disabled="disabled" />
+                    <a href="javascript:void(0)" datatype="SHANDANKAISHI" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
                 </td>
                 <td>
                     <label for="SHANDANKAISHIUSERNAME">删单人:</label>
@@ -132,8 +82,8 @@
                 </td>
                 <td>
                     <label for="GAIDANKAISHITIME"> 改单时间:</label>
-                    <input class="easyui-textbox time_input" datatype="GAIDANKAISHI" id="GAIDANKAISHITIME" name="GAIDANKAISHITIME" editable="false" />
-                    @*<a href="javascript:void(0)" datatype="GAIDANKAISHI" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>*@
+                    <input class="easyui-textbox time_input" type="text" id="GAIDANKAISHITIME" name="GAIDANKAISHITIME" disabled="disabled" />
+                    <a href="javascript:void(0)" datatype="GAIDANKAISHI" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
                 </td>
                 <td>
                     <label for="GAIDANKAISHIUSERNAME">改单人:</label>
@@ -144,8 +94,8 @@
             <tr>
                 <td>
                     <label for="CHAYANZHILINGXIAFATIME"> 查验时间:</label>
-                    <input class="easyui-textbox time_input INSPSTATUS" datatype="CHAYANZHILINGXIAFA" id="CHAYANZHILINGXIAFATIME" name="CHAYANZHILINGXIAFATIME" editable="false" />
-                    @*<a href="javascript:void(0)" datatype="CHAYANZHILINGXIAFA" class="easyui-linkbutton fillingData INSPSTATUS"><i class="icon-time"></i></a>*@
+                    <input class="easyui-textbox time_input" type="text" id="CHAYANZHILINGXIAFATIME" name="CHAYANZHILINGXIAFATIME" disabled="disabled" />
+                    <a href="javascript:void(0)" datatype="CHAYANZHILINGXIAFA" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
                 </td>
                 <td>
                     <label for="CHAYANZHILINGXIAFAUSERNAME">查验人:</label>
@@ -153,8 +103,8 @@
                 </td>
                 <td>
                     <label for="CHAYANFANGXINGTIME"> 查验放行时间:</label>
-                    <input class="easyui-textbox time_input" datatype="CHAYANFANGXING" id="CHAYANFANGXINGTIME" name="CHAYANFANGXINGTIME" editable="false" />
-                    @*<a href="javascript:void(0)" datatype="CHAYANFANGXING" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>*@
+                    <input class="easyui-textbox time_input" type="text" id="CHAYANFANGXINGTIME" name="CHAYANFANGXINGTIME" disabled="disabled" />
+                    <a href="javascript:void(0)" datatype="CHAYANFANGXING" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
                 </td>
                 <td>
                     <label for="CHAYANFANGXINGUSERNAME">查验放行人:</label>
@@ -162,11 +112,13 @@
                 </td>
             </tr>
 
+
+
             <tr>
                 <td>
                     <label for="XUNZHENGTIME">熏蒸时间:</label>
-                    <input class="easyui-textbox time_input INSPSTATUS" datatype="XUNZHENG" id="XUNZHENGTIME" name="XUNZHENGTIME" editable="false" />
-                    @*<a href="javascript:void(0)" datatype="XUNZHENG" class="easyui-linkbutton fillingData INSPSTATUS"><i class="icon-time"></i></a>*@
+                    <input class="easyui-textbox time_input" type="text" id="XUNZHENGTIME" name="XUNZHENGTIME" disabled="disabled" />
+                    <a href="javascript:void(0)" datatype="XUNZHENG" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
                 </td>
                 <td>
                     <label for="XUNZHENGUSERNAME">熏蒸人:</label>
@@ -222,18 +174,6 @@
                     <label for="SHANDANDESC">删单备注:</label>
                     <input class="easyui-textbox" name="SHANDANDESC">
                 </td>
-
-                <td>
-                    <label for="INSPSTATUS">报检状态:</label>
-                    @*<select class="easyui-combobox" name="INSPSTATUS">
-                            <option value="">请选择</option>
-                            <option value="报检">报检</option>
-                            <option value="木托">查验</option>
-                            <option value="熏蒸">熏蒸</option>
-                        </select>*@
-
-                    <input class="easyui-textbox" name="INSPSTATUS" id="INSPSTATUS">
-                </td>
             </tr>
 
             <tr>
@@ -247,29 +187,47 @@
                            data-options="min:0">
                 </td>
                 <td>
-                    <label for="GAIDANDESC">改单备注:</label>
+                    <label for="GAIDANDESC">删单备注:</label>
                     <input class="easyui-textbox" name="GAIDANDESC">
                 </td>
             </tr>
-
         </table>
     </div>
 
     <div style="text-align:center;padding:5px 0">
-        <a class="btn btn-primary" href="javascript:void(0)" onclick="TongguandanInfo()">
-            通关单信息
-        </a>
-        <a class="btn btn-primary" href="javascript:void(0)" onclick="JizhuangxiangInfo()">
-            集装箱信息
-        </a>
         <a class="btn btn-primary" href="javascript:void(0)" onclick="submitForm()">
             <i class="fa fa-floppy-o"></i> 保存
         </a>
+
         <a class="btn btn-primary" href="javascript:void(0)" onclick="javascript: history.back(-1);">
             <i class="icon-reply"></i> 返回
         </a>
     </div>
 </form>
+
+<div id="" class="easyui-panel" title="通关单信息"
+     data-options="collapsible:true">
+
+    <table id="dg" style="height:250px" class="easyui-datagrid"
+           data-options=" rownumbers:true,
+                                   dataType : 'json',
+                                   method:'get'">
+        <thead>
+            <tr>
+                <th data-options="field: 'ID', checkbox: true"></th>
+                <th data-options="field:'BUSIUNITNAME,sortable:true'">通关单号</th>
+                <th data-options="field:'TOTALNO,sortable:true'">报检单号</th>
+                <th data-options="field:'DIVIDENO,sortable:true'">总件数</th>
+                <th data-options="field:'GOODSWEIGHT,sortable:true'">总重量</th>
+                <th data-options="field:'DECLSHEETNUM,sortable:true'">通关单张数</th>
+                <th data-options="field:'DECLSHEETNUM,sortable:true'">报检状态</th>
+            </tr>
+        </thead>
+    </table>
+
+</div>
+
+
 
 <script type="text/javascript">
     Edit();
