--- a/Views/Declare/OnelineIn_List.cshtml
+++ b/Views/Declare/OnelineIn_List.cshtml
@@ -29,7 +29,7 @@
         { code: 'MANIFEST', name: '载货清单号' },
         { code: 'text', name: '报关单号' },
         { code: 'FWONO', name: 'FWO订单号' },
-        { code: 'FOCUSTOMSNO', name: 'FO号' }
+        { code: 'FOONO', name: 'FO号' }
     ];
     $(function () {
         loadListGrid('Declare/OnelineIn_Edit');
@@ -82,7 +82,6 @@
                     <th data-options="field:'FOONO',width:190,sortable:true">FOO报关服务号</th>
                     <th data-options="field:'FOONOBJ',width:190,sortable:true">FOO报检服务号</th>
                     <th data-options="field:'CODE',width:100,sortable:true">业务编号</th>
-                    <th data-options="field:'FOONO',width:190,sortable:true">FOO报关服务号</th> 
                     <th data-options="field:'CODE',width:80,sortable:true">业务编号</th>
                     <th data-options="field:'CUSTOMDISTRICTCODE',width:80,sortable:true">关区代码</th>
                     <th data-options="field:'LAWCONDITION',width:80,sortable:true,formatter:formatLAWCONDITION">是否法检</th>
