--- a/Views/Declare/OnelineOut_List.cshtml
+++ b/Views/Declare/OnelineOut_List.cshtml
@@ -25,7 +25,7 @@
         { code: 'ARRIVEDNO', name: '运抵编号' },
         { code: 'text', name: '报关单号' },
         { code: 'FWONO', name: 'FWO订单号' },
-        { code: 'FOCUSTOMSNO', name: 'FO号' },
+        { code: 'FOONO', name: 'FO号' },
         { code: 'ARRIVEDNO', name: '运抵编号' }
     ];
     $(function () {
