--- a/Views/Declare/SpecialSupervision_Edit.cshtml
+++ b/Views/Declare/SpecialSupervision_Edit.cshtml
@@ -10,8 +10,8 @@
                     <input class="easyui-textbox" type="text" name="FWONO" disabled="disabled" />
                 </td>
                 <td>
-                    <label for="FOCUSTOMSNO">FO号:</label>
-                    <input class="easyui-textbox" type="text" name="FOCUSTOMSNO" disabled="disabled" />
+                    <label for="FOONO">FO号:</label>
+                    <input class="easyui-textbox" type="text" name="FOONO" disabled="disabled" />
                 </td>
                 <td>
                     <label for="CODE">业务编号:</label>
