--- a/Views/Inspect/DomesticKnot_Edit.cshtml
+++ b/Views/Inspect/DomesticKnot_Edit.cshtml
@@ -5,6 +5,7 @@
         <form class="OrderFrom" method="post" id="OrderFrom1">
             <input type="hidden" name="ID" value="@ViewData["id1"]" />
             <input type="hidden" name="type" value="02" />
+            <input type="hidden" name="CODE" />
             <table class="scene">
 
                 <tr>
@@ -14,7 +15,7 @@
                         </td>*@
                     <td>
                         <label>FWO号:</label>
-                        <input class="easyui-textbox" type="text" name="CODE" disabled="disabled" />
+                        <input class="easyui-textbox" type="text" name="FWONO" disabled="disabled" />
                     </td>
 
                     <td>
