--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -109,6 +109,7 @@
                         <li><a href="#">权限管理</a></li>
                         <li><a href="/Common/SyncFoo_List">同步日志</a></li>
                         <li><a href="/Common/SyncMsg_List">同步状态</a></li>
+                        <li><a href="/Common/BackMsg_List">返回状态</a></li>
                         <li><a href="/Common/Attachment_List">随附文件</a></li>
                     </ul>
                 </li>
