--- a/Views/Declare/SpecialSupervision_List.cshtml
+++ b/Views/Declare/SpecialSupervision_List.cshtml
@@ -21,7 +21,7 @@
         { code: 'CONTAINERNO', name: '集装箱号' },
         { code: 'TURNPRENO', name: '转关单号' },
         { code: 'FWONO', name: 'FWO订单号' },
-        { code: 'FOCUSTOMSNO', name: 'FO号' },
+        { code: 'FOONO', name: 'FO号' },
         { code: 'ARRIVEDNO', name: '运抵编号' },
     ];
     $(function () {
